# distgym

./: .pre-commit-config.yaml  pyproject.toml
.github/: README.md
.github/workflows/: ci.yml
distgym/core/: diloco.py
examples/: timm.py
examples/llama-finetune/: config.json  input_pipeline.py  train.py
