[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "distgym"
version = "0.0.2"
authors = [{ name = "Saurav Maheshkar", email = "sauravvmaheshkar@gmail.com" }]
description = "simulated distributed training"
readme = ".github/README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "wandb",
]

[project.urls]
repository="https://github.com/SauravMaheshkar/distgym"

[project.optional-dependencies]
examples = [
  "datasets",
  "timm",
  "transformers",
]
dev = [
  "pre-commit",
  "ruff"
]

[tool.ruff.lint]
select = ["E", "F", "I001", "W"]

[tool.ruff.lint.isort]
lines-after-imports = 2
